@@ -3,29 +3,35 @@ package gov.nasa.jpl.aerie.merlin.server;
 import com.mongodb.client.MongoClients;
 import gov.nasa.jpl.aerie.merlin.driver.json.JsonEncoding;
 import gov.nasa.jpl.aerie.merlin.protocol.SerializedValue;
-import gov.nasa.jpl.aerie.merlin.server.services.GetSimulationResultsAction;
-import gov.nasa.jpl.aerie.merlin.server.services.LocalAdaptationService;
+import gov.nasa.jpl.aerie.merlin.server.config.AppConfiguration;
+import gov.nasa.jpl.aerie.merlin.server.config.AppConfigurationJsonMapper;
+import gov.nasa.jpl.aerie.merlin.server.config.MongoStore;
+import gov.nasa.jpl.aerie.merlin.server.config.Store;
 import gov.nasa.jpl.aerie.merlin.server.http.AdaptationExceptionBindings;
 import gov.nasa.jpl.aerie.merlin.server.http.AdaptationRepositoryExceptionBindings;
 import gov.nasa.jpl.aerie.merlin.server.http.LocalAppExceptionBindings;
-import gov.nasa.jpl.aerie.merlin.server.remotes.RemoteAdaptationRepository;
 import gov.nasa.jpl.aerie.merlin.server.http.MerlinBindings;
-import gov.nasa.jpl.aerie.merlin.server.remotes.RemotePlanRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.AdaptationRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.MongoAdaptationRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.MongoPlanRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.MongoResultsCellRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.PlanRepository;
+import gov.nasa.jpl.aerie.merlin.server.remotes.ResultsCellRepository;
+import gov.nasa.jpl.aerie.merlin.server.services.CachedSimulationService;
+import gov.nasa.jpl.aerie.merlin.server.services.GetSimulationResultsAction;
+import gov.nasa.jpl.aerie.merlin.server.services.LocalAdaptationService;
 import gov.nasa.jpl.aerie.merlin.server.services.LocalPlanService;
-import gov.nasa.jpl.aerie.merlin.server.services.RunSimulationAction;
-import gov.nasa.jpl.aerie.merlin.server.services.SimulationAgent;
-import gov.nasa.jpl.aerie.merlin.server.services.ThreadedMongoSimulationService;
+import gov.nasa.jpl.aerie.merlin.server.services.SynchronousSimulationAgent;
+import gov.nasa.jpl.aerie.merlin.server.services.ThreadedSimulationAgent;
+import gov.nasa.jpl.aerie.merlin.server.services.UnexpectedSubtypeError;
 import io.javalin.Javalin;
 
 import javax.json.Json;
 import javax.json.JsonObject;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.function.Supplier;
 import java.util.logging.Logger;
 
 public final class AerieAppDriver {
@@ -34,70 +40,75 @@ public final class AerieAppDriver {
   public static void main(final String[] args) {
     // Fetch application configuration properties.
     final var configuration = loadConfiguration(args);
+    final var stores = loadStores(configuration);
 
     // Assemble the core non-web object graph.
-    final var mongoDatabase = MongoClients
-        .create(configuration.MONGO_URI().toString())
-        .getDatabase(configuration.MONGO_DATABASE());
-    final var planRepository = new RemotePlanRepository(
-        mongoDatabase,
-        configuration.MONGO_PLAN_COLLECTION(),
-        configuration.MONGO_ACTIVITY_COLLECTION());
-    final var adaptationRepository = new RemoteAdaptationRepository(
-        mongoDatabase,
-        configuration.MONGO_ADAPTATION_COLLECTION());
-
-    final var missionModelConfigGet = makeMissionModelConfigSupplier(configuration);
-    final var adaptationController = new LocalAdaptationService(missionModelConfigGet, adaptationRepository);
-    final var planController = new LocalPlanService(planRepository, adaptationController);
-
-    final var simulationAgent = SimulationAgent.spawn(
+    final var missionModelDataPath = makeMissionModelDataPath(configuration);
+    final var adaptationController = new LocalAdaptationService(missionModelDataPath, stores.adaptations());
+    final var planController = new LocalPlanService(stores.plans(), adaptationController);
+    final var simulationAgent = ThreadedSimulationAgent.spawn(
         "simulation-agent",
-        new RunSimulationAction(planController, adaptationController));
-
-    final var simulationAction = new GetSimulationResultsAction(
-        planController,
-        adaptationController,
-        new ThreadedMongoSimulationService(
-            mongoDatabase.getCollection(configuration.MONGO_SIMULATION_RESULTS_COLLECTION()),
-            simulationAgent));
+        new SynchronousSimulationAgent(planController, adaptationController));
+    final var simulationController = new CachedSimulationService(stores.results(), simulationAgent);
+    final var simulationAction = new GetSimulationResultsAction(planController, adaptationController, simulationController);
+    final var merlinBindings = new MerlinBindings(planController, adaptationController, simulationAction);
 
     // Configure an HTTP server.
     final var javalin = Javalin.create(config -> {
       config.showJavalinBanner = false;
-      if (configuration.enableJavalinLogging()) config.enableDevLogging();
+      if (configuration.javalinLogging().isEnabled()) config.enableDevLogging();
       config
           .enableCorsForAllOrigins()
-          .registerPlugin(new MerlinBindings(planController, adaptationController, simulationAction))
+          .registerPlugin(merlinBindings)
           .registerPlugin(new LocalAppExceptionBindings())
           .registerPlugin(new AdaptationRepositoryExceptionBindings())
           .registerPlugin(new AdaptationExceptionBindings());
     });
 
     // Start the HTTP server.
-    javalin.start(configuration.HTTP_PORT());
+    javalin.start(configuration.httpPort());
   }
 
-  /** Allows for mission model configuration to be loaded when an adaptation is loaded. */
-  private static Supplier<SerializedValue> makeMissionModelConfigSupplier(final AppConfiguration configuration)
-  {
-    // Try to deserialize JSON configuration to a serialized configuration
-    return () -> configuration.MISSION_MODEL_CONFIG_PATH()
-        .map(p -> {
-          try {
-            final var fs = new FileInputStream(p);
-            final var sv = JsonEncoding.decode(Json.createReader(fs).read());
-            log.info(String.format("Successfully loaded mission model configuration from: %s", p));
-            return sv;
-          } catch (final FileNotFoundException ex) {
-            log.warning(String.format("Unable to find mission model configuration path: \"%s\". Simulations will receive an empty set of configuration arguments.", p));
-            return SerializedValue.NULL;
-          }
-        })
-        .orElseGet(() -> {
-          log.warning("No mission model configuration specified in server configuration. Simulations will receive an empty set of configuration arguments.");
-          return SerializedValue.NULL;
-        });
+  private record Stores (PlanRepository plans, AdaptationRepository adaptations, ResultsCellRepository results) {}
+
+  private static Stores loadStores(final AppConfiguration config) {
+    final var store = config.store();
+    if (store instanceof MongoStore c) {
+      final var mongoDatabase = MongoClients
+          .create(c.uri().toString())
+          .getDatabase(c.database());
+
+      return new Stores(
+          new MongoPlanRepository(
+              mongoDatabase,
+              c.planCollection(),
+              c.activityCollection()),
+          new MongoAdaptationRepository(
+              makeJarsPath(config),
+              mongoDatabase,
+              c.adaptationCollection()),
+          new MongoResultsCellRepository(
+              mongoDatabase,
+              c.simulationResultsCollection()));
+    } else {
+      throw new UnexpectedSubtypeError(Store.class, store);
+    }
+  }
+
+  private static Path makeMissionModelDataPath(final AppConfiguration configuration) {
+    try {
+      return Files.createDirectories(configuration.merlinFilesPath());
+    } catch (final IOException ex) {
+      throw new Error("Error creating merlin file store files directory", ex);
+    }
+  }
+
+  private static Path makeJarsPath(final AppConfiguration configuration) {
+    try {
+      return Files.createDirectories(configuration.merlinJarsPath());
+    } catch (final IOException ex) {
+      throw new Error("Error creating merlin file store jars directory", ex);
+    }
   }
 
   private static AppConfiguration loadConfiguration(final String[] args) {
@@ -107,7 +118,7 @@ public final class AerieAppDriver {
       try {
         configStream = Files.newInputStream(Path.of(args[0]));
       } catch (final IOException ex) {
-        log.warning(String.format("Configuration file \"%s\" could not be loaded: %s", args[0], ex.getMessage()));
+        log.warning("Configuration file \"%s\" could not be loaded: %s".formatted(args[0], ex.getMessage()));
         System.exit(1);
         throw new Error(ex);
       }
@@ -117,6 +128,6 @@ public final class AerieAppDriver {
 
     // Read and process the configuration source.
     final var config = (JsonObject)(Json.createReader(configStream).readValue());
-    return AppConfiguration.parseProperties(config);
+    return AppConfigurationJsonMapper.fromJson(config);
   }
 }
